--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "title": "Background Color",
   "version": "0.0.1",
   "description": "Template for Background Color in Objective-C",
+  "scope": "source.objc, source.objc++",
   "main": "dust.js",
+  "category": "shape",
+  "layerType": ["shapeLayer"],
   "author": "Tomas Ruzicka <tomasruzicka@abdoc.net> (https://github.com/lezuse)",
   "license": "MIT",
   "dependencies": {
   },
   "bundledDependencies": [
-  ],
-  "settings": {
-    "category": {
-      "type": "string",
-      "default": "shape"
-    }
-  }
+  ]
 }
